# HW4

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: point.h  polygon.h
src/: point.cpp  polygon.cpp
test/: CMakeLists.txt  unit_tests.cpp
